--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -26,7 +26,11 @@
             <span asp-validation-for="Input.SteamAccount" class="text-danger"></span>
         </div>
 
-        <button id="update-profile-button" type="submit" class="boton">Save</button>
+        <div class="perfil-flexible">
+            <div class="perfil-flexible-izquierda">
+                <button id="update-profile-button" type="submit" class="boton">Save</button>
+            </div>
+        </div> 
     </form>
 </div>
 
