--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Login.cshtml
@@ -14,9 +14,9 @@
 
         <div asp-validation-summary="ModelOnly" class="texto-peligro-entrada" role="alert"></div>
         <div class="mb-3">
-            <label asp-for="Input.Login" class="texto-info-entrada">Username</label>
-            <input asp-for="Input.Login" class="entrada-texto" autocomplete="username" aria-required="true" placeholder="name" />
-            <span asp-validation-for="Input.Login" class="texto-peligro-entrada"></span>
+            <label asp-for="Input.Email" class="texto-info-entrada">Email</label>
+            <input asp-for="Input.Email" class="entrada-texto" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+            <span asp-validation-for="Input.Email" class="texto-peligro-entrada"></span>
         </div>
         <div class="mb-3">
             <label asp-for="Input.Password" class="texto-info-entrada">Password</label>
