--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -15,8 +15,8 @@
         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
         <div class="mb-3">
-            <label asp-for="Input.Username" class="texto-info-entrada"></label>
-            <input asp-for="Input.Username" class="entrada-texto" placeholder="Please choose your username." />
+            <label asp-for="Input.Nickname" class="texto-info-entrada"></label>
+            <input asp-for="Input.Nickname" class="entrada-texto" placeholder="Please choose your nickname." />
         </div>
 
         <div class="mb-3">
