--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -36,7 +36,7 @@
         <div class="mb-3">
             <label asp-for="Input.NewEmail" class="texto-info-entrada"></label>
             <input asp-for="Input.NewEmail" class="entrada-texto" autocomplete="email" aria-required="true" placeholder="Please enter new email." />
-            <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
+            <span asp-validation-for="Input.NewEmail" class="texto-peligro-entrada"></span>
         </div>
 
         <div class="perfil-flexible">
