--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -8,6 +8,8 @@
     --fondoEntrada: #0d1621;
     --fondoBoton: #1982bf;
     --fondoBotonHover: #1671a6;
+    --fondoBotonPequeño: #0d1621;
+    --fondoBotonPequeñoHover: #060a0f;
     --colorTextoPeligro: #f04f5e;
     --colorTextoPeligroHover: #b91020;
     --colorTextoOscuro: #86aeef;
