--- a/pepeizqs deals web/Pages/Juegos/Index.cshtml
+++ b/pepeizqs deals web/Pages/Juegos/Index.cshtml
@@ -1,35 +1,60 @@
 ﻿@page
 @model pepeizqs_deals_web.Pages.Juegos.IndexModel
+
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
+
+@inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
+
 @{
+	ViewData["Title"] = "Juegos";
+	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<br/>
-<h2>Juegos</h2>
-<a class='btn btn-primary btn-sm' href='/Juegos/Añadir'>Nuevo Juego</a>
-<table class='table'>
-	<thead>
-		<tr>
-			<th>ID</th>
-			<th>Nombre</th>
-			<th>Imagen</th>
-			<th>Drm</th>
-			<th>Enlace</th>
-		</tr>
-	</thead>
-	<tbody>
-		@foreach(var juego in Model.listaJuegos)
+@if (SignInManager.IsSignedIn(User))
+{
+	@if (await UsuarioCoger.RolDios(UserManager, User) == true)
+	{
+		<div class="perfil perfil-espacio-bottom">
+			<div class="perfil-flexible">
+				<div class="perfil-flexible-izquierda">
+					<a class='boton' href='/Juegos/Añadir'>Añadir Juego</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="perfil perfil-espacio-bottom">
+			<form asp-page="Index" method="post">
+				<div class="perfil-flexible-centrado">
+					<div class="perfil-flexible-izquierda">
+						<button class="boton" type="submit">Buscar Juego</button>
+					</div>
+					<div class="admin-busqueda">
+						<input value="@Model.busquedaJuegos" class="entrada-texto" />
+					</div>
+				</div>
+			</form>
+		</div>
+
+		@if (Model.listaJuegos.Count > 0)
 		{
-			<tr>
-				<td>@juego.Id</td>
-				<td>@juego.Nombre</td>
-				<td>@juego.Imagen</td>
-				<td>@juego.Drm</td>
-				<td>@juego.Enlace</td>
-				<td>
-					<a class="btn btn-primary btn-sm" href="/Juegos/Editar?id=@juego.Id">Editar</a>
-					<a class="btn btn-danger btn-sm" href="/Juegos/Borrar?id=@juego.Id">Borrar</a>
-				</td>
-			</tr>
+			<div class="perfil">
+				<div class="texto-info">Última Búsqueda</div>
+
+				@foreach (var juego in Model.listaJuegos)
+				{
+					<div class="perfil-flexible-centrado perfil-espacio-top">
+						<div class="admin-busqueda-juego-izquierda">
+							<a class="boton-pequeño" href="/Juegos/Editar?id=@juego.Id">@juego.Id - @juego.Nombre</a>
+						</div>
+
+						<div class="admin-busqueda-juego-derecha">
+							<a href="/Juegos/Borrar?id=@juego.Id" class="boton-pequeño-peligro">Borrar</a>
+						</div>
+					</div>
+				}
+			</div>
 		}
-	</tbody>
-</table>
+	}
+}
