--- a/pepeizqs deals web/Pages/Juegos/Editar.cshtml
+++ b/pepeizqs deals web/Pages/Juegos/Editar.cshtml
@@ -32,21 +32,21 @@
 	<div class="row mb-3">
 		<label class="col-sm-3 col-form-label">Imagen</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control" name="imagen" value="@Model.juego.Imagen" />
+			@*<input type="text" class="form-control" name="imagen" value="@Model.juego.Imagen" />*@
 		</div>
 	</div>
 
 	<div class="row mb-3">
 		<label class="col-sm-3 col-form-label">Drm</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control" name="drm" value="@Model.juego.Drm" />
+			@*<input type="text" class="form-control" name="drm" value="@Model.juego.Drm" />*@
 		</div>
 	</div>
 
 	<div class="row mb-3">
 		<label class="col-sm-3 col-form-label">Enlace</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control" name="enlace" value="@Model.juego.Enlace" />
+			@*<input type="text" class="form-control" name="enlace" value="@Model.juego.Enlace" />*@
 		</div>
 	</div>
 
