--- a/pepeizqs deals web/Pages/Juegos/Añadir.cshtml
+++ b/pepeizqs deals web/Pages/Juegos/Añadir.cshtml
@@ -1,10 +1,92 @@
 ﻿@page
 @model pepeizqs_deals_web.Pages.Juegos.AñadirModel
+
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
+
+@inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
+
 @{
+	ViewData["Title"] = "Añadir Juego";
+	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<br>
-<h2>Añadir Juego</h2>
+@if (SignInManager.IsSignedIn(User))
+{
+	@if (await UsuarioCoger.RolDios(UserManager, User) == true)
+	{
+		<form method="post">
+			<div class="perfil perfil-espacio-bottom">			
+				<div class="perfil-flexible-centrado">
+					<div class="perfil-flexible-izquierda">
+						<button class="boton" type="submit">Precargar Juego</button>
+					</div>
+					<div class="admin-busqueda">
+						<input value="@Model.idPrecarga" name="precarga" class="entrada-texto" />
+					</div>
+				</div>			
+			</div>
+
+			<div class="perfil">
+				<label class="texto-info-entrada">Datos</label>
+				<hr />
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">ID</label>
+				<input class="entrada-texto" name="id" value="@Model.juegoAñadir.Id"/>
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Titulo</label>
+				<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.Nombre"/>
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Tipo (Game/DLC/Bundle)</label>
+				<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.Tipo" />
+
+				@if (Model.juegoAñadir.PrecioActualesTiendas != null)
+				{
+					@if (Model.juegoAñadir.PrecioActualesTiendas.Count > 0)
+					{
+						<label class="texto-info-entrada admin-añadir-espacio-adicional-top">Precios</label>
+						<hr />
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">Descuento</label>
+						<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.PrecioActualesTiendas[0].Descuento"/>
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">DRM</label>
+						<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.PrecioActualesTiendas[0].DRM" />
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">Precio</label>
+						<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.PrecioActualesTiendas[0].Precio" />
+					}
+				}
+
+
+
+				<label class="texto-info-entrada admin-añadir-espacio-adicional-top">Imágenes</label>
+				<hr />
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Header (460x215)</label>
+				<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.Imagenes.Header_460x215"/>
+				<img class="admin-imagen-mostrar" src="@Model.juegoAñadir.Imagenes.Header_460x215"/>
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Capsule (231x87)</label>
+				<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.Imagenes.Capsule_231x87" />
+				<img class="admin-imagen-mostrar" src="@Model.juegoAñadir.Imagenes.Capsule_231x87"/>
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Logo</label>
+				<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.Imagenes.Logo" />
+				<img class="admin-imagen-mostrar" src="@Model.juegoAñadir.Imagenes.Logo" />
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Library (600x900)</label>
+				<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.Imagenes.Library_600x900" />
+				<img class="admin-imagen-mostrar" src="@Model.juegoAñadir.Imagenes.Library_600x900" />
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Library (1920x620)</label>
+				<input class="entrada-texto" name="nombre" value="@Model.juegoAñadir.Imagenes.Library_1920x620" />
+				<img class="admin-imagen-mostrar" src="@Model.juegoAñadir.Imagenes.Library_1920x620" />
+			</div>
+		</form>
+	}
+}
 
 @if (Model.errorMensaje.Length > 0)
 {
@@ -15,21 +97,21 @@
 }
 
 <form method="post">
-	<div class="row mb-3">
+@*	<div class="row mb-3">
 		<label class="col-sm-3 col-form-label">ID</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control" name="id" value="@Model.juego.Id" />
+			<input type="text" class="form-control" name="id" value="@Model.juegoAñadir.Id" />
 		</div>
 	</div>
 
 	<div class="row mb-3">
 		<label class="col-sm-3 col-form-label">Nombre</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control" name="nombre" value="@Model.juego.Nombre" />
+			<input type="text" class="form-control" name="nombre" value="@Model.juegoAñadir.Nombre" />
 		</div>
 	</div>
-
-	<div class="row mb-3">
+*@
+@*	<div class="row mb-3">
 		<label class="col-sm-3 col-form-label">Imagen</label>
 		<div class="col-sm-6">
 			<input type="text" class="form-control" name="imagen" value="@Model.juego.Imagen" />
@@ -48,7 +130,7 @@
 		<div class="col-sm-6">
 			<input type="text" class="form-control" name="enlace" value="@Model.juego.Enlace" />
 		</div>
-	</div>
+	</div>*@
 
 	@if (Model.exitoMensaje.Length > 0)
 	{
