--- a/pepeizqs deals web/wwwroot/css/cuenta.css
+++ b/pepeizqs deals web/wwwroot/css/cuenta.css
@@ -229,3 +229,16 @@
     min-width: 150px;
     padding-left: 30px;
 }
+
+.admin-añadir-espacio-top {
+    margin-top: 10px;
+}
+
+.admin-añadir-espacio-adicional-top {
+    margin-top: 30px;
+}
+
+.admin-imagen-mostrar {
+    max-width: 200px;
+    max-height: 200px;
+}
