--- a/pepeizqs deals web/Pages/Juegos/Editar.cshtml
+++ b/pepeizqs deals web/Pages/Juegos/Editar.cshtml
@@ -1,74 +1,181 @@
 ﻿@page
 @model pepeizqs_deals_web.Pages.Juegos.EditarModel
+
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
+
+@inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
+
 @{
+	ViewData["Title"] = "Editar Juego";
+	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<br>
-<h2>Editar Juego</h2>
-
-@if (Model.errorMensaje.Length > 0)
+@if (SignInManager.IsSignedIn(User))
 {
-	<div class="alert alert-warning alert-dismissible fade show" role="alert">
-		<strong>@Model.errorMensaje</strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-	</div>
-}
-
-<form method="post">
-	<div class="row mb-3">
-		<label class="col-sm-3 col-form-label">ID</label>
-		<div class="col-sm-6">
-			<input type="text" class="form-control" name="id" value="@Model.juego.Id" />
-		</div>
-	</div>
-
-	<div class="row mb-3">
-		<label class="col-sm-3 col-form-label">Nombre</label>
-		<div class="col-sm-6">
-			<input type="text" class="form-control" name="nombre" value="@Model.juego.Nombre" />
-		</div>
-	</div>
-
-	<div class="row mb-3">
-		<label class="col-sm-3 col-form-label">Imagen</label>
-		<div class="col-sm-6">
-			@*<input type="text" class="form-control" name="imagen" value="@Model.juego.Imagen" />*@
-		</div>
-	</div>
-
-	<div class="row mb-3">
-		<label class="col-sm-3 col-form-label">Drm</label>
-		<div class="col-sm-6">
-			@*<input type="text" class="form-control" name="drm" value="@Model.juego.Drm" />*@
-		</div>
-	</div>
-
-	<div class="row mb-3">
-		<label class="col-sm-3 col-form-label">Enlace</label>
-		<div class="col-sm-6">
-			@*<input type="text" class="form-control" name="enlace" value="@Model.juego.Enlace" />*@
-		</div>
-	</div>
-
-	@if (Model.exitoMensaje.Length > 0)
+	@if (await UsuarioCoger.RolDios(UserManager, User) == true)
 	{
-		<div class="row mb-3">
-			<div class="col-sm-9">
-				<div class="alert alert-success alert-dismissible fade show" role="alert">
-					<strong>@Model.exitoMensaje</strong>
-					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		<div class="perfil">
+			<label class="texto-info-entrada">Datos</label>
+			<hr />
+
+			<label class="texto-info-entrada admin-añadir-espacio-top">ID</label>
+			<input class="entrada-texto" name="id" value="@Model.juegoEditar.Id" />
+
+			<label class="texto-info-entrada admin-añadir-espacio-top">Titulo</label>
+			<input class="entrada-texto" name="nombre" value="@Model.juegoEditar.Nombre" />
+
+			<label class="texto-info-entrada admin-añadir-espacio-top">Tipo (Game/DLC/Bundle)</label>
+			<input class="entrada-texto" name="tipo" value="@Model.juegoEditar.Tipo" />
+
+			@if (Model.juegoEditar.PrecioActualesTiendas != null)
+			{
+				@if (Model.juegoEditar.PrecioActualesTiendas.Count > 0)
+				{
+					@for (int i = 0; i < Model.juegoEditar.PrecioActualesTiendas.Count; i++)
+					{
+						<label class="texto-info-entrada admin-añadir-espacio-adicional-top">Precio @i.ToString()</label>
+						<hr />
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">Descuento</label>
+						<input class="entrada-texto" name="descuento_@i.ToString()" value="@Model.juegoEditar.PrecioActualesTiendas[i].Descuento" />
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">DRM</label>
+						<input class="entrada-texto" name="drm_@i.ToString()" value="@Model.juegoEditar.PrecioActualesTiendas[i].DRM" />
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">Precio</label>
+						<input class="entrada-texto" name="precio_@i.ToString()" value="@Model.juegoEditar.PrecioActualesTiendas[i].Precio" />
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">Moneda</label>
+						<input class="entrada-texto" name="moneda_@i.ToString()" value="@Model.juegoEditar.PrecioActualesTiendas[i].Moneda" />
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">Fecha Detectado</label>
+						<input class="entrada-texto" name="fechadetectado_@i.ToString()" value="@Model.juegoEditar.PrecioActualesTiendas[i].FechaDetectado" />
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">Fecha Termina</label>
+						<input class="entrada-texto" name="fechatermina_@i.ToString()" value="@Model.juegoEditar.PrecioActualesTiendas[i].FechaTermina" />
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">Enlace</label>
+						<input class="entrada-texto" name="enlace_@i.ToString()" value="@Model.juegoEditar.PrecioActualesTiendas[i].Enlace" />
+
+						<label class="texto-info-entrada admin-añadir-espacio-top">Tienda</label>
+						<input class="entrada-texto" name="tienda_@i.ToString()" value="@Model.juegoEditar.PrecioActualesTiendas[i].Tienda" />
+					}
+				}
+			}
+
+			<label class="texto-info-entrada admin-añadir-espacio-adicional-top">Imágenes</label>
+			<hr />
+
+			<label class="texto-info-entrada admin-añadir-espacio-top">Header (460x215)</label>
+			<input class="entrada-texto" name="imagenheader" value="@Model.juegoEditar.Imagenes.Header_460x215" />
+			<img class="admin-imagen-mostrar" src="@Model.juegoEditar.Imagenes.Header_460x215" />
+
+			<label class="texto-info-entrada admin-añadir-espacio-top">Capsule (231x87)</label>
+			<input class="entrada-texto" name="imagencapsule" value="@Model.juegoEditar.Imagenes.Capsule_231x87" />
+			<img class="admin-imagen-mostrar" src="@Model.juegoEditar.Imagenes.Capsule_231x87" />
+
+			<label class="texto-info-entrada admin-añadir-espacio-top">Logo</label>
+			<input class="entrada-texto" name="imagenlogo" value="@Model.juegoEditar.Imagenes.Logo" />
+			<img class="admin-imagen-mostrar" src="@Model.juegoEditar.Imagenes.Logo" />
+
+			<label class="texto-info-entrada admin-añadir-espacio-top">Library (600x900)</label>
+			<input class="entrada-texto" name="imagenlibrary1" value="@Model.juegoEditar.Imagenes.Library_600x900" />
+			<img class="admin-imagen-mostrar" src="@Model.juegoEditar.Imagenes.Library_600x900" />
+
+			<label class="texto-info-entrada admin-añadir-espacio-top">Library (1920x620)</label>
+			<input class="entrada-texto" name="imagenlibrary2" value="@Model.juegoEditar.Imagenes.Library_1920x620" />
+			<img class="admin-imagen-mostrar" src="@Model.juegoEditar.Imagenes.Library_1920x620" />
+
+			@if (Model.juegoEditar.Caracteristicas != null)
+			{
+				<label class="texto-info-entrada admin-añadir-espacio-adicional-top">Caracteristicas</label>
+				<hr />
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Windows</label>
+				<input class="entrada-texto" name="windows" value="@Model.juegoEditar.Caracteristicas.Windows.ToString()" />
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Mac</label>
+				<input class="entrada-texto" name="mac" value="@Model.juegoEditar.Caracteristicas.Mac.ToString()" />
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Linux</label>
+				<input class="entrada-texto" name="linux" value="@Model.juegoEditar.Caracteristicas.Linux.ToString()" />
+
+				@if (Model.juegoEditar.Caracteristicas.Desarrolladores != null)
+				{
+					@if (Model.juegoEditar.Caracteristicas.Desarrolladores.Count > 0)
+					{
+						<label class="texto-info-entrada admin-añadir-espacio-top">Desarrolladores</label>
+
+						@for (int i = 0; i < Model.juegoEditar.Caracteristicas.Desarrolladores.Count; i++)
+						{
+							<input class="entrada-texto" name="desarrollador_@i.ToString()" value="@Model.juegoEditar.Caracteristicas.Desarrolladores[i]" />
+						}
+					}
+				}
+
+				@if (Model.juegoEditar.Caracteristicas.Publishers != null)
+				{
+					@if (Model.juegoEditar.Caracteristicas.Publishers.Count > 0)
+					{
+						<label class="texto-info-entrada admin-añadir-espacio-top">Publishers</label>
+
+						@for (int i = 0; i < Model.juegoEditar.Caracteristicas.Publishers.Count; i++)
+						{
+							<input class="entrada-texto" name="publisher_@i.ToString()" value="@Model.juegoEditar.Caracteristicas.Publishers[i]" />
+						}
+					}
+				}
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Descripcion</label>
+				<input class="entrada-texto" name="descripcion" value="@Model.juegoEditar.Caracteristicas.Descripcion" />
+			}
+
+
+
+
+			@if (Model.juegoEditar.Media != null)
+			{
+				<label class="texto-info-entrada admin-añadir-espacio-adicional-top">Media</label>
+				<hr />
+
+				<label class="texto-info-entrada admin-añadir-espacio-top">Video</label>
+				<input class="entrada-texto" name="video" value="@Model.juegoEditar.Media.Video" />
+
+				@if (Model.juegoEditar.Media.Capturas != null)
+				{
+					@if (Model.juegoEditar.Media.Capturas.Count > 0)
+					{
+						@for (int i = 0; i < Model.juegoEditar.Media.Capturas.Count; i++)
+						{
+							<label class="texto-info-entrada admin-añadir-espacio-top">Captura @i.ToString()</label>
+							<input class="entrada-texto" name="captura_@i.ToString()" value="@Model.juegoEditar.Media.Capturas[i]" />
+							<img class="admin-imagen-mostrar" src="@Model.juegoEditar.Media.Capturas[i]" />
+						}
+					}
+				}
+			}
+
+			<hr />
+
+			<div class="perfil-flexible-centrado admin-añadir-espacio-adicional-top">
+				<div class="perfil-flexible-izquierda">
+					<button class="boton" type="submit">Editar Juego</button>
 				</div>
 			</div>
 		</div>
+
+		@if (Model.exitoMensaje.Length > 0)
+		{
+			<div class="row mb-3">
+				<div class="col-sm-9">
+					<div class="alert alert-success alert-dismissible fade show" role="alert">
+						<strong>@Model.exitoMensaje</strong>
+						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+					</div>
+				</div>
+			</div>
+		}
 	}
-
-	<div class="row mb-3">
-		<div class="offset-sm-3 col-sm-3 d-grid">
-			<button type="submit" class="btn btn-primary">Enviar</button>
-		</div>
-
-		<div class="col-sm-3 d-grid">
-			<a class="btn btn-outline-primary" href="/" role="button">Cancelar</a>
-		</div>
-	</div>
-</form>
+}
