--- a/pepeizqs deals web/Pages/Juegos/Index.cshtml
+++ b/pepeizqs deals web/Pages/Juegos/Index.cshtml
@@ -31,7 +31,7 @@
 						<button class="boton" type="submit">Buscar Juego</button>
 					</div>
 					<div class="admin-busqueda">
-						<input value="@Model.busquedaJuegos" class="entrada-texto" />
+						<input value="@Model.busquedaJuegos" name="busquedajuegos" class="entrada-texto" />
 					</div>
 				</div>
 			</form>
