--- a/pepeizqs deals web/Pages/Juegos/Index.cshtml
+++ b/pepeizqs deals web/Pages/Juegos/Index.cshtml
@@ -46,7 +46,7 @@
 				{
 					<div class="perfil-flexible-centrado perfil-espacio-top">
 						<div class="admin-busqueda-juego-izquierda">
-							<a class="boton-pequeño" href="/Juegos/Editar?id=@juego.Id">@juego.Id - @juego.Nombre</a>
+							<a class="boton-pequeño" href="/Juegos/Editar?id=@juego.Id">@juego.Nombre</a>
 						</div>
 
 						<div class="admin-busqueda-juego-derecha">
