--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/maestro.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/cabecera_cuerpo_pie.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/cuenta.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/resto.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/pepeizqs_deals_web.styles.css" asp-append-version="true" />
 </head>
@@ -40,7 +40,7 @@
                                     <a class="texto-cabecera" asp-area="" asp-page="/Juegos/Index">Admin Juegos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="texto-cabecera" asp-area="" asp-page="/Juegos/Tiendas">Admin Tiendas</a>
+                                    <a class="texto-cabecera" asp-area="" asp-page="/Tiendas/Index">Admin Tiendas</a>
                                 </li>
                             }
                         }
