--- a/pepeizqs deals web/Pages/Tiendas/Index.cshtml
+++ b/pepeizqs deals web/Pages/Tiendas/Index.cshtml
@@ -22,7 +22,7 @@
 				<div class="perfil perfil-espacio-bottom">
 					<div class="perfil-flexible-centrado">
 						<div class="perfil-flexible-izquierda">
-							<button class="boton" id="@tienda.Id" type="submit"><img src="@tienda.Imagen300x80"/></button>
+							<button class="boton" id="@tienda.Id" asp-route-id="@tienda.Id" type="submit"><img src="@tienda.Imagen300x80" /></button>
 						</div>
 
 					</div>
